add vue-store===>vue js

--- a/test/test.html
+++ b/test/test.html
@@ -12,22 +12,10 @@
   <script src="../node_modules/next-abstract-storage/dist/next-abstract-storage.js"></script>
   <script src="../node_modules/next-local-storage/dist/next-local-storage.js"></script>
   <script src="../node_modules/next-session-storage/dist/next-session-storage.js"></script>
-  <script src="../src/next-store.js"></script>
+  <script src="../src/vue-store.js"></script>
 
   <script>
-    nx.Store.config('MY_PROJECT_PREFIX');
-    nx.Store.local = {
-      name:'afei',
-      age:120
-    };
 
-
-    console.log(nx.Store.local);
-
-
-    nx.Store.engine = 'sessionStorage';
-    nx.Store.set('mysession1','svl1');
-    console.log( nx.Store.gets() );
   </script>
 
 </body>
